--- a/_data/home.yml
+++ b/_data/home.yml
@@ -12,39 +12,35 @@ started:
 
 ### Started Personal
 started-personal:
-  title: "Hello, I’m <strong>Alejandro Abeyta</strong>, UX/UI Designer and <br />Front-end Developer Based in San Francisco."
+  title: "Hello, we're<strong>AleDan audio</strong>"
   typed:
-    - "I code cool <strong>websites</strong>"
-    - "I develop <strong>mobile apps</strong>"
-    - "I love <strong>wordpress</strong>"
+    - "We offer <strong>audio post-production</strong>"
+    - "We offer <strong>sound design</strong>"
   image: "assets/img/man.jpg"
-  
+
 ### Started Image
 started-image:
-  title: "Hello, I’m <strong>Alejandro Abeyta</strong>, UX/UI Designer and <br />Front-end Developer Based in San Francisco."
+  title: "Hello, we're<strong>AleDan audio</strong>"
   typed:
-    - "I code cool <strong>websites</strong>"
-    - "I develop <strong>mobile apps</strong>"
-    - "I love <strong>wordpress</strong>"
+    - "We offer <strong>audio post-production</strong>"
+    - "We offer <strong>sound design</strong>"
   image: "assets/img/started_image_p.jpg"
-  
+
 ### Started Video
 started-video:
-  title: "Hello, I’m <strong>Alejandro Abeyta</strong>, UX/UI Designer and <br />Front-end Developer Based in San Francisco."
-  typed:
-    - "I code cool <strong>websites</strong>"
-    - "I develop <strong>mobile apps</strong>"
-    - "I love <strong>wordpress</strong>"
+title: "Hello, we're<strong>AleDan audio</strong>"
+typed:
+  - "We offer <strong>audio post-production</strong>"
+  - "We offer <strong>sound design</strong>"
   video: "https://youtu.be/S4L8T2kFFck"
   image: "assets/img/started_image_p.jpg"
-  
+
 ### Started Slider
 started-slider:
-  title: "Hello, I’m <strong>Alejandro Abeyta</strong>, UX/UI Designer and <br />Front-end Developer Based in San Francisco."
+  title: "Hello, we're<strong>AleDan audio</strong>"
   typed:
-    - "I code cool <strong>websites</strong>"
-    - "I develop <strong>mobile apps</strong>"
-    - "I love <strong>wordpress</strong>"
+    - "We offer <strong>audio post-production</strong>"
+    - "We offer <strong>sound design</strong>"
   images:
     - "assets/img/started_image.jpg"
     - "assets/img/started_image2.jpg"
