--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,19 +10,8 @@ main:
   - title: "Home"
     url: "/"
     parent: 1
-    childs:
-        - title: "Home Personal"
-          url: "/"
-        - title: "Home Default"
-          url: "index-default/"
-        - title: "Home Slider"
-          url: "index-slider/"
-        - title: "Home Image"
-          url: "index-image/"
-        - title: "Home Video"
-          url: "index-video/"
-    
-  # Resume
+
+  # About us
   - title: "Resume"
     url: "resume/"
     parent: 1
@@ -31,25 +20,16 @@ main:
           url: "resume/"
         - title: "Resume Image"
           url: "resume-image/"
-  
+
   # Portfolio
   - title: "Portfolio"
     url: "portfolio/"
     parent: 0
-  
+
   # Blog
-  - title: "Blog"
-    url: "blog/"
-    parent: 0
-  
+
+
   # Contacts
   - title: "Contacts"
-    url: "contacts/"
+    url: "contacts-image/"
     parent: 1
-    childs:
-        - title: "Contacts Default"
-          url: "contacts/"
-        - title: "Contacts Image"
-          url: "contacts-image/"
-        - title: "Contacts Map"
-          url: "contacts-map/"
