--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,11 +4,11 @@
 
 ### Started Default
 started:
-  title: "Hello, I’m <strong>Alejandro Abeyta</strong>, UX/UI Designer and <br />Front-end Developer Based in San Francisco."
+  title: "Hello, we're<strong>AleDan audio</strong>"
   typed:
-    - "I code cool <strong>websites</strong>"
-    - "I develop <strong>mobile apps</strong>"
-    - "I love <strong>wordpress</strong>"
+    - "We offer <strong>audio post-production</strong>"
+    - "We offer <strong>sound design</strong>"
+  image: "assets/img/man.jpg"
 
 ### Started Personal
 started-personal:
