--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@
 settings:
   logo_text: "<strong><AleDan></strong> audio"
   logo_hover_text: "Download <strong>CV</strong>"
-  quick_colors: "yellow" # select quick color schemes: "beige", "blue", "brown", "green_light", "green", "orange", "purple", "red", "yellow_light", "yellow". If empty colors taken from _sass/ryancv/settings.scss
+  quick_colors: "yellow_light" # select quick color schemes: "beige", "blue", "brown", "green_light", "green", "orange", "purple", "red", "yellow_light", "yellow". If empty colors taken from _sass/ryancv/settings.scss
 
 ### Portfolio Filters Settings
 portfolio:
